--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,12 @@
 url: https://tbroder14.github.io
-baseurl: /sarah-website
+#dev
+# baseurl: /sarah-website 
+
+#prod
+baseurl: / 
 
 # Site settings
-title: Awesome Title
+title: SARAH
 email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
@@ -47,7 +51,7 @@ social:
   - title: twitter
     url: http://twitter.com/jekyllrb
   - title: facebook
-    url:
+    url: 
   - title: stack-overflow
     url: http://stackoverflow.com/questions/tagged/jekyll
   - title: bitbucket 
