made new text image sections and faq sections

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 url: https://tbroder14.github.io
 #dev
-# baseurl: /sarah-website 
+baseurl: /sarah-website 
 
 #prod
-baseurl: / 
+# baseurl: / 
 
 # Site settings
 title: SARAH
@@ -49,15 +49,11 @@ people:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
+    url: \#
   - title: facebook
-    url: 
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket 
-    url: http://bitbucket.org/jekyll
+    url: \#
   - title: github
-    url: http://github.com/jekyll
+    url: \#
 
 # Postal address (add as many lines as necessary)
 address:
