--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,5 +1,6 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
+  # primary: 1c1c44
   primary: fed136
   secondary: fec503   
   secondary-dark: 333
