--- a/_data/template.yml
+++ b/_data/template.yml
@@ -1,8 +1,9 @@
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  # primary: 1c1c44
-  primary: fed136
-  secondary: fec503   
+  primary: 6a6aca
+  # primary: fed136
+  secondary: 4e298a
+  # secondary: fec503 
   secondary-dark: 333
   muted: 777
 
