--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: /
 # Site settings
 title: SARAH
 email: your-email@domain.com
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
+description: "Support - Assess - Respond - Adapt - Heal."
 
 
 # Team names, titles and social links
