--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: https://tbroder14.github.io
 baseurl: / 
 
 # Site settings
-title: SARAH
+title: SARAIH
 email: your-email@domain.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
