--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: /
 
 # Site settings
 title: SARAIH
-email: your-email@domain.com
+email: joshjkleins@gmail.com
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
 
